--- a/project_1/Makefile
+++ b/project_1/Makefile
@@ -1,5 +1,5 @@
-result.csv: project_1.py
-	python project_1.py
+result.csv: main.py
+	python main.py
 
 result_figure.pdf：generate_figure.R
 	R CMD BATCH generate_figure.R
