--- a/project_2/Makefile
+++ b/project_2/Makefile
@@ -1,2 +1,5 @@
 result.csv: mmit.py targets.csv
 	python mmit.py
+
+result_figure_1.pdf result_figure_2.pdf：generate_figure.R result.csv
+	R CMD BATCH generate_figure.R
